Fix: spotlight sidebar overflow issue, header min-height, back btn flex-shrink issue

--- a/assets/scss/front/course-spotlight/_sidebar.scss
+++ b/assets/scss/front/course-spotlight/_sidebar.scss
@@ -18,7 +18,7 @@
 			flex: 0 0 100%;
 			width: 100%;
 			position: absolute;
-			right: -100%;
+			// right: -100%;
 			top: 0px;
 			opacity: 0;
 			z-index: -1;
