--- a/assets/scss/front/course-spotlight/index.scss
+++ b/assets/scss/front/course-spotlight/index.scss
@@ -83,7 +83,7 @@
 				flex-shrink: 0;
 				align-items: center;
 				padding: 8px 16px;
-				height: 60px;
+				min-height: 60px;
 				position: relative;
 				z-index: 1025;
 
